# werkzeug-private-tar

./: pyproject.toml  setup.py  werkzeug_private_tar-2.3.3-py3-none-any.whl
werkzeug/: werkzeug_private_tar-2.3.3-py3-none-any.whl
werkzeug-private-tar/: setup.py
werkzeug_private_tar.egg-info/: PKG-INFO  SOURCES.txt
